# coffee-break

./: .dockerignore  .env.example  .eslintrc.json  .gitignore  .swcrc  Dockerfile  Dockerfile.dev  README.md  compose.yaml  docker-compose.dev.yaml  jest.config.mjs  lint-staged.config.js  package.json  plopfile.ts  pnpm-lock.yaml  pnpm-workspace.yaml  server.ts  tailwind.config.js  tailwind.config.ts  tsconfig.json  turbo.json  vitest.config.ts  vitest.setup.ts
.husky/: pre-commit
apps/npc/: README.md  pyproject.toml
apps/npc/lib/caffe-break-api/: .gitlab-ci.yml  .travis.yml  README.md  pyproject.toml  setup.py  tox.ini
apps/npc/lib/caffe-break-api/.openapi-generator/: FILES
apps/npc/lib/caffe-break-api/caffe_break_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
apps/npc/lib/caffe-break-api/docs/: DefaultApi.md  PlayerCreate200Response.md  PlayerCreate200ResponseRole.md  PlayerCreate200ResponseStatus.md  PlayerCreateDefaultResponse.md  PlayerCreateDefaultResponseIssuesInner.md  PlayerCreateRequest.md  RoomCreate200Response.md  RoomCreate200ResponsePhase.md  RoomCreate200ResponsePlayersInner.md  RoomCreateRequest.md  RoomLeaveRequest.md
apps/npc/lib/caffe-break-api/test/: test_default_api.py  test_player_create200_response.py  test_player_create200_response_role.py  test_player_create200_response_status.py  test_player_create_default_response.py  (+7 more)
apps/npc/src/: __init__.py  __main__.py  a.py  api.py  approute.py  b.py  config.py  parent.py
apps/npc/src/clients/: player_create.py  room_join.py
apps/npc/src/entity/: player.py
(+414 files in other folders)
