[tool.poetry]
name = "caffe-break-npc"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.25.2"
asyncio = "^3.4.3"
toml = "^0.10.2"
openapi-client = {path = "lib/caffe-break-api"}
caffe-break-client = {path = "lib/caffe-break-api"}
returns = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
